feature: add styling to login

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,7 @@
 :root {
+  --primary-teal: rgb(42, 216, 187);
+  --primary-blue: rgb(65, 105, 255);
+
   --dark-gray: rgb(120, 120, 120);
   --gray: rgba(199, 199, 199, 1);
   --light-gray: rgba(199, 199, 199, 1);
