--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+$fancy-font-family: 'Architects Daughter', sans-serif;
+
 /* mobile */
 @media (max-width: 600px) {
   .login {
@@ -7,11 +10,21 @@
     }
 
     &__banner {
-      background-color: var(--light-gray);
-      text-align: center;
-      
+      background-image: linear-gradient(to right,
+          rgba(42, 216, 187, 0.9),
+          rgba(14, 45, 137, 0.9)),
+        url("../assets/images/scheduleDesk.jpg");
+      background-size: cover;
+      background-position: bottom;
+    
+      display: grid;
+      justify-items: center;
+      align-items: center;
+    
       &--content {
-        padding-top: 100px;
+        font-size: 25px;
+        font-family: $fancy-font-family;
+        color: var(--white);
       }
     }
 
@@ -20,6 +33,11 @@
     }
 
     &__form-container {
+      &--title {
+        padding-left: 10px;
+        font-size: 20px;
+      }
+
       &--forgot {
         font-size: 12px;
         padding: 10px;
@@ -38,17 +56,21 @@
     }
 
     &__banner {
-      background-color: var(--light-gray);
+      background-image: linear-gradient(to right,
+          rgba(42, 216, 187, 0.9),
+          rgba(14, 45, 137, 0.9)),
+        url("../assets/images/scheduleDesk.jpg");
+      background-size: cover;
+      background-position: bottom;
 
       display: grid;
       justify-items: center;
       align-items: center;
 
       &--content {
-        height: 100px;
-        width: 200px;
-
-        font-size: 30px;
+        font-size: 35px;
+        font-family: $fancy-font-family;
+        color: var(--white);
       }
     }
 
@@ -61,7 +83,8 @@
       width: 400px;
 
       &--title {
-        font-size: 30px;
+        padding-left: 10px;
+        font-size: 20px;
       }
 
       &--forgot {
@@ -84,5 +107,111 @@
 .login {
   &__page {
     min-height: 100vh;
+  }
+}
+
+.login__banner {
+  position: relative;
+}
+
+.floating-icon {
+  &--calendar {
+    color: var(--white);
+    opacity: 0.8;
+    font-size: 50px;
+  
+    animation: floating-two 60s ease-in-out infinite;
+  
+    position: absolute;
+    top: 20px;
+    left: 40px;
+  }
+
+  &--user-clock {
+    color: var(--white);
+    opacity: 0.8;
+    font-size: 50px;
+  
+    animation: floating-one 45s ease-in-out infinite;
+  
+    position: absolute;
+    top: 60px;
+    right: 40px;
+  }
+
+  &--list {
+    color: var(--white);
+    opacity: 0.8;
+    font-size: 50px;
+  
+    animation: floating-one 75s ease-in-out infinite;
+  
+    position: absolute;
+    bottom: 50px;
+    left: 200px;
+  }
+}
+
+@keyframes floating-one {
+  0% {
+    opacity: 0.0;
+    transform: translate(0, 0px);
+    rotate: 0deg;
+  }
+
+  25% {
+    opacity: 0.8;
+    transform: translate(40px, 25px);
+    rotate: -45deg;
+  }
+
+  50% {
+    opacity: 0.4;
+    transform: translate(100px, 50px);
+    rotate: 90deg;
+  }
+
+  75% {
+    opacity: 0.6;
+    transform: translate(50px, 25px);
+    rotate: 45deg;
+  }
+
+  100% {
+    opacity: 0.0;
+    transform: translate(0, -0px);
+    rotate: 0deg;
+  }
+}
+
+@keyframes floating-two {
+  0% {
+    opacity: 0.0;
+    transform: translate(0, 0px);
+    rotate: 0deg;
+  }
+
+  25% {
+    opacity: 0.8;
+    transform: translate(20px, 50px);
+    rotate: 45deg;
+  }
+
+  50% {
+    opacity: 0.5;
+    transform: translate(50px, 150px);
+    rotate: 90deg;
+  }
+
+  75% {
+    opacity: 0.8;
+    transform: translate(30px, 60px);
+    rotate: -45deg;
+  }
+
+  100% {
+    opacity: 0.0;
+    transform: translate(0, -0px);
+    rotate: -90deg;
   }
 }
