--- a/src/styles/Schedule.scss
+++ b/src/styles/Schedule.scss
@@ -56,42 +56,74 @@
 
 .schedule {
   &__heading {
-    &--panel {
-      height: 75px;
-      display: grid;
-      align-items: center;
-      background-color: var(--white);
-      
-      & h1 {
-        font-size: 1.5em;
-        font-weight: bold;
+    padding-left: 10px;
+  }
 
-        padding: 20px;
-        margin: 0;
+  &__summary {
+    padding: 10px 20px;
+
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+
+    &--details {
+      font-size: 0.75em;
+
+      & div {
+        padding: 1px 10px;
       }
     }
-  }
 
-  &__details {
-    &--panel{
-      padding: 10px 20px;
-      font-size: 0.75em;
+    &--details-title {
+      font-weight: bold;
+    }
+
+    &--icon {
+      font-size: 1.5em;
+      text-align: center;
+      padding: 15px;
+
+      background-color: var(--primary-blue);
+      color: var(--white);
     }
   }
 
-  &__main-content {
-    background-color: white;
-    border-top: solid 1px #ddd;
-    box-shadow: inset 0 2px 5px #ddd;
-    margin: 1em 0;
-    padding: 1em;
-  }
+  &__content {
+    margin: 20px;
+    padding: 10px;
+    background-color: var(--white);
+    box-shadow: 1px 1px 1px 1px #ddd;
 
-  &__shifts {
-    font-size: 0.85em;
+    font-size: 0.8em;
 
-    &--grid-header {
+    &--heading {
+      padding: 5px 10px;
+      text-align: center;
       font-weight: bold;
     }
   }
+
+  &__block {
+    padding: 5px;
+    text-align: center;
+    border: solid 1px var(--light-gray);
+
+    &:hover {
+      border: solid 2px var(--primary-teal);
+      cursor: pointer;
+    }
+
+    &--name {
+      padding: 5px;
+    }
+  }
+
+  &__unavailable {
+    padding: 5px;
+    text-align: center;
+
+    background-color: var(--gray);
+    color: var(--white);
+  }
+
 }
