feature: added job types component, configurable

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,13 +1,13 @@
 :root {
-  --primary-teal: rgb(42, 216, 187);
-  --primary-blue: rgb(65, 105, 255);
+  --primary-teal: #2ad8bb;
+  --primary-blue: #4169ff;
 
-  --dark-gray: rgb(120, 120, 120);
-  --gray: rgba(199, 199, 199, 1);
+  --dark-gray: #787878;
+  --gray: #c7c7c7;
   --light-gray: rgba(199, 199, 199, 1);
-  --green: rgba(36, 139, 8, 1);
+  --green: #248b08;
   --green-opacity: rgba(36, 139, 8, 0.5);
-  --orange: rgba(211, 131, 11, 1);
+  --orange: #d3830b;
   --orange-opacity: rgba(211, 131, 11, 0.5);
   --blue: rgba(65, 105, 255, 1);
   --blue-opacity: rgba(65, 105, 255, 0.5);
