--- a/src/styles/ScheduleList.scss
+++ b/src/styles/ScheduleList.scss
@@ -60,6 +60,7 @@
 
     background-color: var(--white);
     color: var(--dark);
+    box-shadow: 1px 1px 1px 1px #ddd;
 
     &--name-cell {
       // margin-bottom: 5px;
