--- a/src/styles/ScheduleList.scss
+++ b/src/styles/ScheduleList.scss
@@ -1,3 +1,7 @@
+.schedules-list {
+  padding: 20px;
+}
+
 /* mobile */
 @media (max-width: 600px) {
   .schedules-list {
@@ -35,26 +39,12 @@
 
 .schedules-list {
 
-  &__header-bar {
-    display: grid;
-    grid-template-columns: 1fr auto;
-  }
-
-  h1 {
-    font-size: 1.5em;
-    font-weight: bold;
-
-    color: #000;
-    padding: 20px;
-    margin: 0;
-  }
-
   &__button-container {
     display: grid;
   }
 
   &__grid {
-    margin: 10px;
+    margin-bottom: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
 
